# cyber-scanner

./: .env.example  .gitignore  BUG_FIX_ATTACK_CLASSIFICATION.md  CODEBASE_OVERVIEW.md  DATA_COLLECTION_IMPLEMENTATION.md  DATA_COLLECTION_SERVICE_DESIGN.md  END_TO_END_TEST_REPORT.md  FINAL_SYSTEM_HANDOFF.md  ML_MODEL_DEPLOYMENT_REPORT.md  MODEL_UPLOAD_IMPLEMENTATION.md  PHASE1_ML_MODELS_DEPLOYMENT_REPORT.md  PIPELINE_INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SYSTEM_SUMMARY.md  SYSTEM_TEST_REPORT.md  TESTING_SUMMARY.md  docker-compose.dev.yml  docker-compose.full.yml  start.sh
backend/: .env.example  CORS_FIX_REPORT.md  DEPLOYMENT_FIX_REPORT.md  Dockerfile  KAFKA_TROUBLESHOOTING.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_kafka_send.sh
backend/alembic/: env.py
backend/alembic/versions/: 20251128_004833_add_data_collection_tables.py  20251130_133448_add_model_profile_fields.py  b725fdb4d6cd_add_ml_models_table_for_model_versioning.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/kafka/: consumer.py  consumer_aiokafka.py  external_consumer.py  producer.py
backend/app/models/: database.py  ml_models.py  ml_models_v2.py  model_loaders.py  schemas.py
backend/app/services/: attack_classifier.py  config_service.py  ip_whitelist.py  model_manager.py  model_profiles.py  (+5 more)
backend/docs/: MODEL_PROFILES.md
backend/samples/: README.md  attack_classification_sample.csv  threat_detection_sample.csv
backend/scripts/: train_models.py
backend/tests/: test_api.py  test_ml_models.py  test_real_models.py
(+67 files in other folders)
