[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI network security threat detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.38.0",
    "kafka-python>=2.3.0",
    "aiokafka>=0.12.0",
    "confluent-kafka>=2.3.0",
    "tensorflow-cpu>=2.20.0",
    "keras>=3.12.0",
    "joblib>=1.5.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "ml-models>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
ml-models = { workspace = true }

[tool.uv.workspace]
members = ['packages/*']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
